# tenca

./: .coveragerc  .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
tenca/: __init__.py  __main__.py  connection.py  exceptions.py  hash_storage.py  mailinglist.py  pipelines.py  settings.py  templates.py
tenca/settings/: __init__.py  defaults.py
tenca/templateserver/: __init__.py  __main__.py
tenca/tests/: __main__.py  data_test_settings.py  test_confirmation.py  test_findlists.py  test_hash_storage.py  test_listproperties.py  test_settings.py  test_templateserver.py
tests/: __main__.py  list_test.py  listtest.py  tenca_test.py  tencatest.py  test_confirmation.py  test_connection.py  test_findlists.py  test_fqdn.py  test_hash_storage.py  test_listproperties.py  test_roles.py  test_templateserver.py
