[metadata]
name = tenca
version = 0.0.3
author = Sven Koehler
author_email = tenca@svenkoehler.de
description = An eemaill-like interface for mailman3.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tzwenn/tenca
project_urls =
    Bug Tracker = https://github.com/tzwenn/tenca/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
install_requires =
	mailmanclient>=3.3.2
packages = find:
python_requires = >=3.6
